code/HADAD-base/src/main/java/hadad/base/compiler/model/rm/RParser.java
// Generated from R.g4 by ANTLR 4.4

package hadad.base.compiler.model.rm;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__46=1, T__45=2, T__44=3, T__43=4, T__42=5, T__41=6, T__40=7, T__39=8, 
		T__38=9, T__37=10, T__36=11, T__35=12, T__34=13, T__33=14, T__32=15, T__31=16, 
		T__30=17, T__29=18, T__28=19, T__27=20, T__26=21, T__25=22, T__24=23, 
		T__23=24, T__22=25, T__21=26, T__20=27, T__19=28, T__18=29, T__17=30, 
		T__16=31, T__15=32, T__14=33, T__13=34, T__12=35, T__11=36, T__10=37, 
		T__9=38, T__8=39, T__7=40, T__6=41, T__5=42, T__4=43, T__3=44, T__2=45, 
		T__1=46, T__0=47, ID=48, WHITESPACE=49, STRING=50, INT=51, MATRIX=52, 
		ROWS=53, COLS=54, READ=55, FALSE=56, TRUE=57;
	public static final String[] tokenNames = {
		"<INVALID>", "'t('", "'/'", "'rowMeans('", "'diag('", "'cumprod('", "'mean('", 
		"'solve('", "'colMaxs('", "'cummin('", "'rowSds('", "'det('", "'colVars('", 
		"'||'", "';'", "'colMins('", "'&&'", "'='", "'^'", "'rowSums('", "'sd('", 
		"'colSds('", "'&'", "'var('", "'('", "'*'", "','", "'rowMins('", "'.'", 
		"'<-'", "'sum('", "'%*%'", "'colMeans('", "'FALSE'", "':'", "'cumsum('", 
		"'trace('", "'|'", "'avg('", "'colSums('", "'cummax('", "')'", "'rowMaxs('", 
		"'%/%'", "'+'", "'-'", "'TRUE'", "'rowVars('", "ID", "WHITESPACE", "STRING", 
		"INT", "MATRIX", "ROWS", "COLS", "READ", "FALSE", "TRUE"
	};
	public static final int
		RULE_rQuery = 0, RULE_rScript = 1, RULE_rStatemnet = 2, RULE_source = 3, 
		RULE_rMatrixConstruction = 4, RULE_rMatrixConstructionMatrixSource = 5, 
		RULE_asMatrix = 6, RULE_asTable = 7, RULE_mName = 8, RULE_header = 9, 
		RULE_flag = 10, RULE_sep = 11, RULE_readMM = 12, RULE_rExpression = 13, 
		RULE_viewName = 14, RULE_matrixName = 15, RULE_matrixNameExpression = 16, 
		RULE_numericScalar = 17, RULE_filePath = 18;
	public static final String[] ruleNames = {
		"rQuery", "rScript", "rStatemnet", "source", "rMatrixConstruction", "rMatrixConstructionMatrixSource", 
		"asMatrix", "asTable", "mName", "header", "flag", "sep", "readMM", "rExpression", 
		"viewName", "matrixName", "matrixNameExpression", "numericScalar", "filePath"
	};

	@Override
	public String getGrammarFileName() { return "R.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RQueryContext extends ParserRuleContext {
		public ViewNameContext viewName() {
			return getRuleContext(ViewNameContext.class,0);
		}
		public RScriptContext rScript() {
			return getRuleContext(RScriptContext.class,0);
		}
		public RQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterRQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitRQuery(this);
		}
	}

	public final RQueryContext rQuery() throws RecognitionException {
		RQueryContext _localctx = new RQueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rQuery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); viewName();
			setState(39); match(T__13);
			setState(40); rScript();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RScriptContext extends ParserRuleContext {
		public RStatemnetContext rStatemnet(int i) {
			return getRuleContext(RStatemnetContext.class,i);
		}
		public List<RStatemnetContext> rStatemnet() {
			return getRuleContexts(RStatemnetContext.class);
		}
		public RScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rScript; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterRScript(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitRScript(this);
		}
	}

	public final RScriptContext rScript() throws RecognitionException {
		RScriptContext _localctx = new RScriptContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_rScript);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); rStatemnet();
			setState(43); match(T__33);
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(44); rStatemnet();
				setState(45); match(T__33);
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RStatemnetContext extends ParserRuleContext {
		public SourceContext source() {
			return getRuleContext(SourceContext.class,0);
		}
		public MatrixNameContext matrixName() {
			return getRuleContext(MatrixNameContext.class,0);
		}
		public RStatemnetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rStatemnet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterRStatemnet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitRStatemnet(this);
		}
	}

	public final RStatemnetContext rStatemnet() throws RecognitionException {
		RStatemnetContext _localctx = new RStatemnetContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_rStatemnet);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52); matrixName();
			setState(53); match(T__18);
			setState(54); source();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceContext extends ParserRuleContext {
		public RExpressionContext rExpression() {
			return getRuleContext(RExpressionContext.class,0);
		}
		public RMatrixConstructionContext rMatrixConstruction() {
			return getRuleContext(RMatrixConstructionContext.class,0);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitSource(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_source);
		try {
			setState(58);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56); rMatrixConstruction();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57); rExpression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RMatrixConstructionContext extends ParserRuleContext {
		public RMatrixConstructionMatrixSourceContext rMatrixConstructionMatrixSource() {
			return getRuleContext(RMatrixConstructionMatrixSourceContext.class,0);
		}
		public RMatrixConstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rMatrixConstruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterRMatrixConstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitRMatrixConstruction(this);
		}
	}

	public final RMatrixConstructionContext rMatrixConstruction() throws RecognitionException {
		RMatrixConstructionContext _localctx = new RMatrixConstructionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rMatrixConstruction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); rMatrixConstructionMatrixSource();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RMatrixConstructionMatrixSourceContext extends ParserRuleContext {
		public AsMatrixContext asMatrix() {
			return getRuleContext(AsMatrixContext.class,0);
		}
		public FlagContext flag() {
			return getRuleContext(FlagContext.class,0);
		}
		public ReadMMContext readMM() {
			return getRuleContext(ReadMMContext.class,0);
		}
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public TerminalNode STRING() { return getToken(RParser.STRING, 0); }
		public MNameContext mName() {
			return getRuleContext(MNameContext.class,0);
		}
		public SepContext sep() {
			return getRuleContext(SepContext.class,0);
		}
		public AsTableContext asTable() {
			return getRuleContext(AsTableContext.class,0);
		}
		public RMatrixConstructionMatrixSourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rMatrixConstructionMatrixSource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterRMatrixConstructionMatrixSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitRMatrixConstructionMatrixSource(this);
		}
	}

	public final RMatrixConstructionMatrixSourceContext rMatrixConstructionMatrixSource() throws RecognitionException {
		RMatrixConstructionMatrixSourceContext _localctx = new RMatrixConstructionMatrixSourceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rMatrixConstructionMatrixSource);
		try {
			setState(86);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62); asMatrix();
				setState(63); match(T__23);
				setState(64); asTable();
				setState(65); match(T__23);
				setState(66); mName();
				setState(67); match(T__21);
				setState(68); header();
				setState(69); match(T__30);
				setState(70); flag();
				setState(71); match(T__21);
				setState(72); sep();
				setState(73); match(T__30);
				setState(74); match(STRING);
				setState(75); match(T__6);
				setState(76); match(T__6);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78); asMatrix();
				setState(79); match(T__23);
				setState(80); readMM();
				setState(81); match(T__23);
				setState(82); mName();
				setState(83); match(T__6);
				setState(84); match(T__6);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsMatrixContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(RParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(RParser.ID, i);
		}
		public AsMatrixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asMatrix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterAsMatrix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitAsMatrix(this);
		}
	}

	public final AsMatrixContext asMatrix() throws RecognitionException {
		AsMatrixContext _localctx = new AsMatrixContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_asMatrix);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); match(ID);
			setState(89); match(T__19);
			setState(90); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsTableContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(RParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(RParser.ID, i);
		}
		public AsTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterAsTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitAsTable(this);
		}
	}

	public final AsTableContext asTable() throws RecognitionException {
		AsTableContext _localctx = new AsTableContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_asTable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(ID);
			setState(93); match(T__19);
			setState(94); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MNameContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(RParser.STRING, 0); }
		public MNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterMName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitMName(this);
		}
	}

	public final MNameContext mName() throws RecognitionException {
		MNameContext _localctx = new MNameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_mName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RParser.ID, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FlagContext extends ParserRuleContext {
		public FlagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterFlag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitFlag(this);
		}
	}

	public final FlagContext flag() throws RecognitionException {
		FlagContext _localctx = new FlagContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_flag);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !(_la==T__14 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SepContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RParser.ID, 0); }
		public SepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sep; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterSep(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitSep(this);
		}
	}

	public final SepContext sep() throws RecognitionException {
		SepContext _localctx = new SepContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_sep);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadMMContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RParser.ID, 0); }
		public ReadMMContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readMM; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterReadMM(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitReadMM(this);
		}
	}

	public final ReadMMContext readMM() throws RecognitionException {
		ReadMMContext _localctx = new ReadMMContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_readMM);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RExpressionContext extends ParserRuleContext {
		public RExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rExpression; }
	 
		public RExpressionContext() { }
		public void copyFrom(RExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RowsMeansExperssionContext extends RExpressionContext {
		public RExpressionContext rExpression() {
			return getRuleContext(RExpressionContext.class,0);
		}
		public RowsMeansExperssionContext(RExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterRowsMeansExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitRowsMeansExperssion(this);
		}
	}
	public static class AtomicExpressionContext extends RExpressionContext {
		public RExpressionContext rExpression() {
			return getRuleContext(RExpressionContext.class,0);
		}
		public AtomicExpressionContext(RExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterAtomicExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitAtomicExpression(this);
		}
	}
	public static class VarExpressionContext extends RExpressionContext {
		public RExpressionContext rExpression() {
			return getRuleContext(RExpressionContext.class,0);
		}
		public VarExpressionContext(RExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterVarExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitVarExpression(this);
		}
	}
	public static class ColumnsSumExperssionContext extends RExpressionContext {
		public RExpressionContext rExpression() {
			return getRuleContext(RExpressionContext.class,0);
		}
		public ColumnsSumExperssionContext(RExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterColumnsSumExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitColumnsSumExperssion(this);
		}
	}
	public static class CumProdExperssionContext extends RExpressionContext {
		public RExpressionContext rExpression() {
			return getRuleContext(RExpressionContext.class,0);
		}
		public CumProdExperssionContext(RExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterCumProdExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitCumProdExperssion(this);
		}
	}
	public static class ColumnsVarExperssionContext extends RExpressionContext {
		public RExpressionContext rExpression() {
			return getRuleContext(RExpressionContext.class,0);
		}
		public ColumnsVarExperssionContext(RExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterColumnsVarExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitColumnsVarExperssion(this);
		}
	}
	public static class CumMinExperssionContext extends RExpressionContext {
		public RExpressionContext rExpression() {
			return getRuleContext(RExpressionContext.class,0);
		}
		public CumMinExperssionContext(RExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterCumMinExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitCumMinExperssion(this);
		}
	}
	public static class MatrixAddExpressionContext extends RExpressionContext {
		public RExpressionContext left;
		public Token op;
		public RExpressionContext right;
		public List<RExpressionContext> rExpression() {
			return getRuleContexts(RExpressionContext.class);
		}
		public RExpressionContext rExpression(int i) {
			return getRuleContext(RExpressionContext.class,i);
		}
		public MatrixAddExpressionContext(RExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterMatrixAddExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitMatrixAddExpression(this);
		}
	}
	public static class RowsMaxsExperssionContext extends RExpressionContext {
		public RExpressionContext rExpression() {
			return getRuleContext(RExpressionContext.class,0);
		}
		public RowsMaxsExperssionContext(RExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterRowsMaxsExperssion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitRowsMaxsExperssion(this);
		}
	}
	public static class MatrixMulElementwiseExpressionContext extends RExpressionContext {
		public RExpressionContext left;
		public Token op;
		public RExpressionContext right;
		public List<RExpressionContext> rExpression() {
			return getRuleContexts(RExpressionContext.class);
		}
		public RExpressionContext rExpression(int i) {
			return getRuleContext(RExpressionContext.class,i);
		}
		public MatrixMulElementwiseExpressionContext(RExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).enterMatrixMulElementwiseExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RListener ) ((RListener)listener).exitMatrixMulElementwiseExpression(this);
		}
	}
	public static class RowsSumExperssionContext extends RExpressionContext {
		public RExpressionContext rExpression() {
			return getRuleContext(RExpressionContext.class,0);
		}
		public RowsSumExperssionContext(RExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
